# SDL2OpenGL3DRender

SDL2OpenGl3DRender/: CMakeLists.txt  Todo.txt
SDL2OpenGl3DRender/src/: CMakeLists.txt  CubeShader.cpp  CubeShader.h  FillShader.cpp  FillShader.h  GameLogic.cpp  GameLogic.h  GameWindow.cpp  GameWindow.h  ShaderManager.cpp  ShaderManager.h  ViewPort.cpp  ViewPort.h  main.cpp
